@@ -1,4 +1,8 @@
 2008-05-07 Sean Huber (shuber@huberry.com)
+	* Fixed Bug: Custom headers were not being sent correctly for requests
+	* Updated README
+
+2008-05-07 Sean Huber (shuber@huberry.com)
 	* Converted README to hard tabs
 
 2008-05-07 Sean Huber (shuber@huberry.com)
